Updated my intro page.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button class="home"><a href="#" class="one">HOME</a></button>
             <button class="achivement"><a href="#achi" class="one">ACHIVEMENTS</a></button>
             <button class="member"><a href="#member" class="one">MEMBER</a></button>
-            <button class="projects"><a href="projects.html" target="_main" class="one">PROJECTS</a></button>
+            <button class="pro"><a href="projects.html" target="_main" class="one">PROJECTS</a></button>
             <button class="contactButton">
               <a href="contact.html" class="one">Contact me:</a>
               <div class="iconButton">
@@ -45,12 +45,33 @@
 
     <div class="members">
       <h1 id="member" class="member-h1">Member</h1>
-      I am very to share that I am currently serving as a core member in three ommunities of our collage.
+      <!-- <p>I am very to share that I am currently serving as a core member in three ommunities of our collage.</p> -->
       <ol>
-        <li> UPES ACM & ACM-W </li><br> There I am serving as a member of event core committe.
-        <li>UPES NSS          </li><BR>There also i am serving as a member of event core committe.
-        <li>UPES IET & NBSP   </li><BR>There i am serving as member of technical core.
+        <li> UPES ACM & ACM-W </li><br>There I am serving as a member of event core committe.<br>
+        <li>UPES NSS          </li><BR>There also i am serving as a member of event core committe.<br>
+        <li>UPES IET & NBSP   </li><BR>There i am serving as member of technical core.<br>
       </ol>
+    </div>
+
+    <div class="projects">
+      <h1 id="project" class="project-h1">My Projects</h1>
+        <ol><!--unordered list of certificates-->
+            <li>Stone Paper Scizzor         <button><!--button for scizzor--><br>
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/stone%20papeer%20scizzor" target="_main"><!--link of the file-->Click Here</a></button></li><br>
+            <li>Seat Reservation system     <button><!--button for seat reservation-->
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/seat_reservation.c" target="_main"><!--link of the file-->Click Here</a></button></li><br>
+            <li>Hostel Management system    <button><!--button for hostel management system-->
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/hostel_management" target="_main"><!--link of the file-->Click Here</a></button></li><br>
+            <li>To_Do_List                  <button><!--button for todolist-->
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/to-do_list" target="_main"><!--link of the file-->Click Here</a></button></li><br>
+            <li>Emplopyee management system <button><!--button for employee management-->
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/employee.c" target="_main"><!--link of the file-->Click Here</a></button></li><br>
+            <li>Car showroom                <button><!--button for car showroom-->
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/carshowroom.c" target="_main"><!--link of the file-->Click Here</a></button></li><br>
+            <li>Cricket score               <button><!--button for cricket score-->
+                <a href="https://github.com/jalaj-25/JALAJC/blob/main/cric_sc.c" target="_main"><!--link of the file-->Click Here</a></button></li><br>                                        
+            <li>LEARNING NEW THINGS</li><br>
+        </ol>
     </div>
 
     <footer>
